--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
-# Development files
+# Dependencies
 node_modules/
 templates/node_modules/
-.git/
-.gitignore
+
+# Build outputs
+dist/
+build/
+templates/dist/
+templates/build/
+
+# Environment files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Build files
-dist/
-build/
-templates/dist/
-templates/build/
 
 # IDE files
 .vscode/
@@ -29,6 +29,7 @@ Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
 
 # Runtime data
 pids
@@ -36,11 +37,8 @@ pids
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
+# Coverage directory
 coverage/
-
-# Dependency directories
-node_modules/
 
 # Optional npm cache directory
 .npm
@@ -53,3 +51,7 @@ node_modules/
 
 # Yarn Integrity file
 .yarn-integrity
+
+# Lock files (optional - some prefer to commit these)
+# package-lock.json
+# yarn.lock
